<resources>
    <string name="app_name">VSU Schedule</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="group">group</string>
    <string name="rschedule">Rings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>
    <string name="pref_group_number">Choose group</string>
    <string-array name="pref_group_list_titles">
        <item>@string/pref_group_l1</item>
        <item>@string/pref_group_l2</item>
    </string-array>
    <string name="pref_group_l1">8th group</string>
    <string name="pref_group_l2">9th group</string>
    <string-array name="pref_group_list_values">
        <item>8</item>
        <item>9</item>
    </string-array>

</resources>
