<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_monday"
                android:title="@string/monday"/>
        <item
                android:id="@+id/nav_tuesday"
                android:title="@string/tuesday"/>
        <item
                android:id="@+id/nav_wednesday"
                android:title="@string/wednesday"/>
        <item
                android:id="@+id/nav_thursday"
                android:title="@string/thursday"/>
        <item
                android:id="@+id/nav_friday"
                android:title="@string/friday"/>
        <item
                android:id="@+id/nav_saturday"
                android:title="@string/saturday"/>
        <item
                android:id="@+id/nav_rschedule"
                android:title="@string/rschedule"/>
    </group>

</menu>
